syntax = "proto3";

package com.ltv.aerospike.api.proto;

message TruncateSetRequest {
    string namespace = 1;
    string set = 2;
}

message TruncateSetResponse {
    int32 errorCode = 1;
}

service TruncateSetService {
    rpc truncateSet(TruncateSetRequest) returns (TruncateSetResponse);
}
